# PPOIS

./: .coverage  темки.txt
lab1/: .coverage  multimnoghestvo.py  run_tests_with_coverage.py  test_multiset.py  test_multiset_main.py  test_tictactoe.py  tictactoe.py
lab1/Multimnoghestvo/: .coverage  multiset.py  test_multiset  test_multiset.py
lab1/krestiki/: .coverage  main.py  test_tictactoe  test_tictactoe.py
lab2/: .coverage  README.md  bookstore.py  coverage.ini  main.py  run_tests_with_coverage.py  test_project.py
lab2/Core_Domains/Order_Processing/: models.py  repository_interface.py  value_objects.py
lab2/Core_Domains/Payments/: exceptions.py  gateway_interface.py  models.py
lab2/Core_Domains/User_Security/: exceptions.py  repository_interface.py  services.py  value_objects.py
lab2/Core_Domains/Warehouse/: exceptions.py  models.py
lab2/Core_Domains/book_catalog/: exceptions.py  models.py  repository_interface.py  (+1 more)
lab2/book_warehouse (1)/: README.md  main.py  verify.py
lab2/tests/: .coverage
lab2_re/: .coverage  README.md  coverage_report.py  main.py  warehouse.db
lab3/: README.md  run_tests_with_coverage.py  test_project.py  travel.py
lab3/travel_app/: README.md
lab3_re/travel_app/: README.md  run_tests_with_coverage.py
lab4/: .coverage
lab4/graph/: main.cpp
lab4/project/: CMakeLists.txt  directed_graph.cpp  test_directed_graph.cpp
lab4/sorting/: .coverage  BST.py  MSD.py  run_tests_with_coverage.py  test_sorting.py
lab4/task1/: .coverage  BST.py  MSD.py  test.py  test_sorting.py
lab4/task2/: CMakeLists.txt  graph_container.py  sort_container.py  test_sort_container.py
unused_material/lab2/: run_tests_with_coverage.py
unused_material/lab3/: .coverage  test_project.py
unused_material/task2/: .coverage  main.cpp  sort_container.py  test_directed_graph.py
(+113 files in other folders)
